cusomtize bootstrap variables

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -2,3 +2,11 @@ $body-bg: #2980b9;
 $navbar-default-bg: #2c3e50;
 $navbar-default-link-color: #ffffff;
 @import 'bootstrap';
+
+.center {
+	text-align: center;
+}
+
+.navbar-brand {
+	font-weight: bold;
+}
